Add validate cluster spec and generate swagger
