# pkg/api/v1/restapi/operations/clusters/validate_cluster.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package clusters
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// ValidateClusterHandlerFunc turns a function with the right signature into a validate cluster handler
+type ValidateClusterHandlerFunc func(ValidateClusterParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn ValidateClusterHandlerFunc) Handle(params ValidateClusterParams) middleware.Responder {
+	return fn(params)
+}
+
+// ValidateClusterHandler interface for that can handle valid validate cluster params
+type ValidateClusterHandler interface {
+	Handle(ValidateClusterParams) middleware.Responder
+}
+
+// NewValidateCluster creates a new http.Handler for the validate cluster operation
+func NewValidateCluster(ctx *middleware.Context, handler ValidateClusterHandler) *ValidateCluster {
+	return &ValidateCluster{Context: ctx, Handler: handler}
+}
+
+/*ValidateCluster swagger:route POST /clusters/validate clusters validateCluster
+
+ValidateCluster validate cluster API
+
+*/
+type ValidateCluster struct {
+	Context *middleware.Context
+	Handler ValidateClusterHandler
+}
+
+func (o *ValidateCluster) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewValidateClusterParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
